// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridColumns renders 0 1`] = `
Array [
  .c0 {
  grid-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders function 1`] = `
Array [
  .c0 {
  grid-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders negative number 1`] = `
Array [
  .c0 {
  grid-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-columns: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-columns: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-columns: July;
  }
}

@media April {
  .c0 {
    grid-columns: August;
  }
}

@media January {
  .c0 {
    grid-columns: September;
  }
}

@media April {
  .c0 {
    grid-columns: November;
  }
}

@media June {
  .c0 {
    grid-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-columns: July;
  }
}

@media April {
  .c0 {
    grid-columns: August;
  }
}

@media January {
  .c0 {
    grid-columns: September;
  }
}

@media April {
  .c0 {
    grid-columns: November;
  }
}

@media June {
  .c0 {
    grid-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-columns: January;
  }
}

@media April {
  .c0 {
    grid-columns: December;
  }
}

@media January {
  .c0 {
    grid-columns: April;
  }
}

@media April {
  .c0 {
    grid-columns: May;
  }
}

@media June {
  .c0 {
    grid-columns: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-columns: January;
  }
}

@media April {
  .c0 {
    grid-columns: December;
  }
}

@media January {
  .c0 {
    grid-columns: April;
  }
}

@media April {
  .c0 {
    grid-columns: May;
  }
}

@media June {
  .c0 {
    grid-columns: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders postitive number 1`] = `
Array [
  .c0 {
  grid-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders string 1`] = `
Array [
  .c0 {
  grid-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumns renders valid theme path 1`] = `
Array [
  .c0 {
  grid-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
